# packages/backend/controllers/categoriasController.js
@@ -1,22 +1,20 @@
 import { z } from "zod"
 
 export class CategoriaController {
-	constructor(service) {
+    constructor(service) {
 
         this.service = service
     }
 
-	async obtenerCategorias(req, res) {
-    
-	    const categorias = await this.service.buscarTodos()
-		res.json(categorias)
+    async obtenerCategorias(req, res) {
+
+        const categorias = await this.service.buscarTodos()
+        res.json(categorias)
     }
-    
-    async crear(req,res){
+
+    async crear(req, res) {
         const categoria = req.body;
         const categoriaAlmacenada = await this.service.crearCategoria(categoria);
         res.status(201).json(categoriaAlmacenada);
     }
-
-
 }
