# packages/backend/docs/api-docs.json
@@ -1,5 +1,5 @@
 {
-    "openapi": "1.0.0",
+    "openapi": "3.0.0",
     "info": {
         "title": "API de Plataforma de Comercio Electrónico",
         "version": "1.0.0",
@@ -12,7 +12,13 @@
                 "responses": {
                     "200": {
                         "description": "Lista de pedidos",
-                        "content": {}
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Pedidos"
+                                }
+                            }
+                        }
                     },
                     "204": {
                         "description": "No hay pedidos"
@@ -23,18 +29,18 @@
                 "summary": "Crear un pedido",
                 "requestBody": {
                     "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Pedido"
-                            }
-                        }
-                    }
+                    "content": {}
                 },
                 "responses": {
                     "201": {
                         "description": "Pedido creado",
-                        "content": {}
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Pedido"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -85,7 +91,15 @@
                 "responses": {
                     "200": {
                         "description": "Lista de productos",
-                        "content": {}
+                        "content": {
+                            "content": {
+                                "application/json": {
+                                    "schema": {
+                                        "$ref": "#/components/schemas/Productos"
+                                    }
+                                }
+                            }
+                        }
                     },
                     "204": {
                         "description": "No hay productos"
@@ -118,7 +132,15 @@
                 "responses": {
                     "200": {
                         "description": "Lista de usuarios",
-                        "content": {}
+                        "content": {
+                            "content": {
+                                "application/json": {
+                                    "schema": {
+                                        "$ref": "#/components/schemas/Usuarios"
+                                    }
+                                }
+                            }
+                        }
                     },
                     "204": {
                         "description": "No hay usuarios"
@@ -130,17 +152,19 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Usuario"
-                            }
-                        }
+                        "application/json": {}
                     }
                 },
                 "responses": {
                     "201": {
                         "description": "usuario creado",
-                        "content": {}
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Usuario"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -161,7 +185,15 @@
                 "responses": {
                     "200": {
                         "description": "Lista de notificaciones",
-                        "content": {}
+                        "content": {
+                            "content": {
+                                "application/json": {
+                                    "schema": {
+                                        "$ref": "#/components/schemas/Notificaciones"
+                                    }
+                                }
+                            }
+                        }
                     },
                     "204": {
                         "description": "No hay notificaciones"
@@ -216,10 +248,66 @@
                 "responses": {
                     "200": {
                         "description": "Lista de pedidos",
-                        "content": {}
+                        "content": {
+                            "content": {
+                                "application/json": {
+                                    "schema": {
+                                        "$ref": "#/components/schemas/Pedidos"
+                                    }
+                                }
+                            }
+                        }
                     },
                     "204": {
                         "description": "No hay pedidos"
+                    }
+                }
+            }
+        },
+        "/health-check": {
+            "get": {
+                "summary": "Obtener estado",
+                "responses": {
+                    "200": {
+                        "description": "Estado: ok"
+                    }
+                }
+            }
+        },
+        "/categorias": {
+            "get": {
+                "summary": "Listar categorías",
+                "responses": {
+                    "200": {
+                        "description": "Lista de categorías",
+                        "content": {
+                            "content": {
+                                "application/json": {
+                                    "schema": {
+                                        "$ref": "#/components/schemas/Categorias"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "summary": "Crear una categoría",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Categoria"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Categoría almacenada",
+                        "content": {}
                     }
                 }
             }
@@ -466,6 +554,132 @@
                 "properties": {
                     "nombre": {
                         "type": "string"
+                    }
+                }
+            },
+            "Pedidos": {
+                "type": "object",
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/components/schemas/Pedido"
+                    }
+                }
+            },
+            "Productos": {
+                "type": "object",
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/components/schemas/Producto"
+                    }
+                }
+            },
+            "Usuarios": {
+                "type": "object",
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/components/schemas/Usuario"
+                    }
+                }
+            },
+            "Notificaciones": {
+                "type": "object",
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/components/schemas/Notificacion"
+                    }
+                }
+            },
+            "Categorias": {
+                "type": "object",
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/components/schemas/Categoria"
+                    }
+                }
+            },
+            "Clase incorrecta": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
+                    }
+                }
+            },
+            "Email invalido": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": "La siguiente dirección de email no cumple con el formato correcto: @gmail.com"
+                    }
+                }
+            },
+            "Formato invalido": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
+                    }
+                }
+            },
+            "Zod Error": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
+                    }
+                }
+            },
+            "Cancelar enviado": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
+                    }
+                }
+            },
+            "Moneda inconsistente": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
+                    }
+                }
+            },
+            "Sin Stock": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
+                    }
+                }
+            },
+            "Not found": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
+                    }
+                }
+            },
+            "No cumple enum": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": ""
                     }
                 }
             }
